--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.datasource.url = jdbc:mysql://localhost:3306/moviedb
 spring.datasource.username = root
 spring.datasource.password = Root@123
 spring.jpa.hibernate.ddl-auto=create
-track.id=6
-track.name=Home
-track.comments=Calvin Harris
+
+track.id=5
+track.name=Titanium
+track.comments=David Guetta
+
+track2.id=6
+track2.name=Summer
+track2.comments=Calvin Harris
